--- a/Labeller/Labeller.csproj
+++ b/Labeller/Labeller.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSVRecord.cs" />
     <Compile Include="CSVSaver.cs" />
     <Compile Include="CSVStructure.cs" />
     <Compile Include="Form1.cs">
@@ -60,11 +61,11 @@
     <Compile Include="ImageDrawer.cs" />
     <Compile Include="ImageSlider.cs" />
     <Compile Include="InformationCSVMerger.cs" />
-    <Compile Include="Obrzek.cs" />
     <Compile Include="PathProvider.cs" />
     <Compile Include="PatientRecord.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +77,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
