--- a/Labeller/Labeller.csproj
+++ b/Labeller/Labeller.csproj
@@ -73,6 +73,7 @@
     <Compile Include="PathStorer.cs" />
     <Compile Include="PatientRecord.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Prompt.cs" />
     <Compile Include="PropertiesReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
